[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/Scene/Trigger/NumberingRodChargeTrigger.gd" type="Script" id=2]
[ext_resource path="res://UI/CommonUI/CommonDiceLabel36.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 23.0

[node name="NumberingRodChargeTrigger" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="colorRectBG" type="ColorRect" parent="."]
margin_left = -23.0
margin_top = -23.0
margin_right = 23.0
margin_bottom = 23.0
__meta__ = {
"_edit_lock_": true
}

[node name="commonDiceLabel36Number" parent="." instance=ExtResource( 3 )]
margin_left = -23.0
margin_top = -23.0
margin_right = 23.0
margin_bottom = 23.0
text = "0"
align = 1
valign = 1

[node name="area2D1" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="collisionShape2D1" type="CollisionShape2D" parent="area2D1"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="area_entered" from="area2D1" to="." method="_on_area2D1_area_entered"]
[connection signal="area_exited" from="area2D1" to="." method="_on_area2D1_area_exited"]
